# churn-risk

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Procfile  alembic.ini  cloudbuild.yaml  pyproject.toml  requirements.txt  test_integrations.py
backend/alembic/: env.py
backend/alembic/versions/: 4aa56adc37c1_add_hubspot_updated_at_and_priority_to_.py  9f1cb95f1d24_add_unique_constraint_to_ticket_.py  b4fc6e577219_make_ticket_content_nullable.py  c08085465bad_initial_schema.py  c8453b9b7f79_add_hubspot_created_at_to_tickets.py
backend/scripts/: create_prompt.py  fetch_and_analyze_tickets.py  fetch_real_tickets.py  fetch_tickets_private_app.py  full_reset.py  simple_oauth_handler.html  smoke_test.py  test_gemini_json.py  test_model_debug.py  test_openrouter_raw.py  test_sentiment_analysis.py  test_sentiment_quick.py  validate_prompts.py
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/core/: auth.py  config.py  database.py  secrets.py
backend/src/integrations/: hubspot.py
backend/src/models/: __init__.py  base.py  churn_risk.py  company.py  contact.py  integration.py  tenant.py  ticket.py  topic.py  user.py
backend/src/prompt_engine/: __init__.py  compiler.py  loader.py
backend/src/schemas/: ai.py  auth.py  integration.py  ticket.py
backend/src/services/: ai_base.py  openrouter.py  ticket_import.py
backend/tests/integration/: test_auth_registration.py  test_hubspot.py
backend/tests/unit/: test_auth.py  test_auth_schemas.py  test_dependencies.py  test_models.py  (+4 more)
(+84 files in other folders)
